操作票页面

--- a/app/src/main/res/layout/program_entrance.xml
+++ b/app/src/main/res/layout/program_entrance.xml
@@ -1,125 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/line_fc"
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dimen_72"
-            android:src="@mipmap/login_logo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/logo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dimen_17"
-            android:text="变电五通应用"
-            android:textColor="@color/colorFc"
-            android:textSize="@dimen/textsize_24" />
-
-        <TextView
-            android:id="@+id/tv_enter_jingyihua"
-            android:layout_width="@dimen/dimen_243"
-            android:layout_height="@dimen/dimen_42"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dimen_101"
-            android:background="@drawable/login_jingyihua"
-            android:gravity="center"
-            android:text="精益化评价"
-            android:textColor="@color/colorFc"
-            android:textSize="@dimen/textsize_20" />
-
-        <TextView
-            android:id="@+id/tv_enter_caozuopiao"
-            android:layout_width="@dimen/dimen_243"
-            android:layout_height="@dimen/dimen_42"
-            android:layout_above="@id/tv_enter_jingyihua"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dimen_14"
-            android:background="@drawable/login_caozuopiao"
-            android:gravity="center"
-            android:text="操作票"
-            android:textColor="@color/line_fc"
-            android:textSize="@dimen/textsize_20" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/tv_enter_caozuopiao"
-            android:layout_marginBottom="@dimen/dimen_27">
-
-            <View
-                android:layout_width="@dimen/dimen_134"
-                android:layout_height="@dimen/dimen_1"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dimen_13"
-                android:background="@color/colorFc" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="选择入口"
-                android:textColor="@color/colorFc"
-                android:textSize="@dimen/textsize_14" />
-
-            <View
-                android:layout_width="@dimen/dimen_134"
-                android:layout_height="@dimen/dimen_1"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/dimen_13"
-                android:background="@color/colorFc" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tv_enter_cache"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dimen_60"
-            android:padding="@dimen/dimen_10"
-            android:text="@string/off_line"
-            android:textColor="@color/colorFc"
-            android:textSize="@dimen/textsize_13" />
-
-        <TextView
-            android:id="@+id/tv_jyh_enter_cache"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dimen_30"
-            android:padding="@dimen/dimen_10"
-            android:text="精益化评价离线入口>>"
-            android:textColor="@color/colorFc"
-            android:textSize="@dimen/textsize_13" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="版本号V 1.0.0"
-            android:textColor="@color/colorFc"
-            android:textSize="@dimen/textsize_12" />
-    </RelativeLayout>
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/view_title"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_25" />
+        android:layout_height="@dimen/dimen_24" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="395dp"
+        android:background="@drawable/homepage_logo">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dimen_10"
+            android:background="#43BDF8">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/dimen_10"
+                android:text="变电五通应用"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textsize_24" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dimen_13"
+                android:src="@mipmap/popupwindow_lxhc" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_160"
+        android:layout_marginTop="-70dp"
+        android:background="@color/colorFc"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dimen_160"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="@dimen/dimen_74"
+                    android:layout_height="@dimen/dimen_74"
+                    android:src="@drawable/homepage_caozuopiao"/>
+                <TextView
+                    android:id="@+id/tv_enter_caozuopiao"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/textsize_20"
+                    android:layout_marginTop="@dimen/dimen_9"
+                    android:layout_marginLeft="@dimen/dimen_5"
+                    android:text="操作票"
+                    android:textColor="@color/color_4d4d4d"/>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="@dimen/dimen_1"
+            android:layout_height="@dimen/dimen_74"
+            android:background="@color/line_color"
+            android:layout_marginTop="@dimen/dimen_35"/>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dimen_160"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="@dimen/dimen_74"
+                    android:layout_height="@dimen/dimen_74"
+                    android:layout_marginLeft="@dimen/dimen_10"
+                    android:src="@drawable/homepage_jingyihua"/>
+                <TextView
+                    android:id="@+id/tv_enter_jingyihua"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/textsize_20"
+                    android:layout_marginTop="@dimen/dimen_9"
+                    android:text="精益化评价"
+                    android:textColor="@color/color_4d4d4d"/>
+            </LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_enter_cache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_jyh_enter_cache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <!--背景图-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/homepage_bg"></LinearLayout>
+
 
 </LinearLayout>
