--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorItemFenge"
         android:orientation="vertical">
 
         <View
@@ -60,7 +61,9 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_main_activity"
-            android:layout_width="match_parent"
+            android:layout_width="450dp"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:layout_gravity="center"
             android:layout_height="match_parent" />
     </LinearLayout>
 
