--- a/app/src/main/res/layout/item_fragment_check_adapter.xml
+++ b/app/src/main/res/layout/item_fragment_check_adapter.xml
@@ -6,18 +6,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="186.5dp"
         android:layout_marginLeft="@dimen/dimen_13"
         android:layout_marginRight="@dimen/dimen_13"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/re_ygd"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_40"
+            android:layout_height="@dimen/dimen_54"
             android:orientation="horizontal">
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/tv_piaohao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,17 +26,18 @@
                 android:text="票号："
                 android:textColor="@color/color_4d4d4d"
                 android:textSize="@dimen/textsize_18" />
+                android:layout_toRightOf="@id/tv_piaohao"
+                -->
 
             <TextView
                 android:id="@+id/tv_processed_fragment_bh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/tv_piaohao"
                 android:singleLine="true"
                 android:text="123544444"
-                android:textColor="@color/color_4d4d4d"
-                android:textSize="@dimen/textsize_18" />
+                android:textColor="#4AA1FE"
+                android:textSize="@dimen/textsize_21" />
 
             <TextView
                 android:id="@+id/tv_ygd_status"
@@ -56,30 +58,31 @@
             android:background="@drawable/dash_line"
             android:layerType="software" />
 
-        <TextView
-            android:id="@+id/tv_processed_fragment_cznr"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_10"
-            android:text="220kv普九策划i手法哦i好地方"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textColor="@color/color_595959"
-            android:textSize="@dimen/textsize_17" />
+            <TextView
+                android:id="@+id/tv_processed_fragment_cznr"
+                android:layout_width="match_parent"
+                android:layout_height="82dp"
+                android:text="220kv普九策划i手法哦i好地方"
+                android:layout_toRightOf="@+id/tv_xiangqing"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textSize="@dimen/textsize_18" />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_50"
             android:layout_marginBottom="@dimen/dimen_13"
-            android:layout_marginTop="@dimen/dimen_13">
+            android:background="#fafafa">
 
             <TextView
                 android:id="@+id/tv_caozuoren"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="制票部门:"
-                android:textColor="@color/color_7a7a7a"
-                android:textSize="@dimen/textsize_15" />
+                android:text="操作人:"
+                android:textColor="@color/color_999999"
+                android:layout_centerVertical="true"
+                android:textSize="@dimen/textsize_17" />
 
             <TextView
                 android:id="@+id/tv_processed_fragment_czr"
@@ -87,8 +90,18 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/tv_caozuoren"
                 android:text="张耀文"
-                android:textColor="@color/color_7a7a7a"
-                android:textSize="@dimen/textsize_15" />
+                android:layout_centerVertical="true"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/textsize_17" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="申报时间:"
+                android:textColor="@color/color_999999"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/tv_processed_fragment_time"
+                android:textSize="@dimen/textsize_17" />
 
             <TextView
                 android:id="@+id/tv_processed_fragment_time"
@@ -96,8 +109,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="2016/11/04 09:49"
-                android:textColor="@color/color_7a7a7a"
-                android:textSize="@dimen/textsize_15" />
+                android:layout_centerVertical="true"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/textsize_17" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
